<resources>
    <string name="app_name">jTalkmod</string>
    <string name="version">0.48</string>
    <string name="build">403</string>
    <string name="Connect">Connect</string>
    <string name="Disconnect">Disconnect</string>
    <string name="Authentication">Authentication</string>
    <string name="Connecting">Connecting</string>
    <string name="Reconnecting">Reconnecting</string>
    <string name="GettingRoster">Getting roster</string>
    <string name="Me">Me</string>
    <string name="Settings">Preferences</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="apply">Apply</string>
    <string name="Add">Add</string>
    <string name="Status">Status</string>
    <string name="Exit">Exit</string>
    <string name="Send">Send</string>
    <string name="NotConnected">Disconnected</string>
    <string name="ConnectionError">Check account settings</string>
    <string name="Actions">Actions</string>
    <string name="Nogroup">Ungrouped</string>
    <string name="SelfGroup">Self contacts</string>
    <string name="AllContacts">All contacs</string>
    <string name="Other">Other</string>
    <string name="Roster">Roster</string>
    <string name="Chat">Chat</string>
    <string name="StatusName">JTalkStatus</string>
    <string name="StatusMessage">Status message</string>
    <string name="UnreadMessage">You have unread messages</string>
    <string name="NewMessageFrom">New message from</string>
    <string name="Bookmarks">Bookmarks</string>
    <string name="Load">Load</string>
    <string name="NoMessages">No new Messages</string>
    <string name="Messages">Messages:</string>
    <string name="Invite">Invite</string>
    <string name="InviteTo">Invite to</string>
    <string name="View">View</string>
    <string name="Composes">Composes message...</string>
    <string name="Templates">Templates</string>
    <string name="and">and</string>
    <string name="Chats">Chats</string>
    <string name="To">To</string>
    <string name="MessagesCopied">Messages is copied</string>
    <string name="notes">Notes</string>
    <string name="Registration">Registration</string>
    <string name="AddInRoster">Add in roster</string>
    <string name="Accounts">Accounts</string>
    <string name="JabberId">JID</string>
	<string name="Password">Password</string>
	<string name="Ringtone">Ringtone</string>
	<string name="RingtoneConference">Ringtone for conferences</string>
	<string name="RingtoneDirect">Ringtone for direct messages</string>
	<string name="Vibration">Vibration</string>
    <string name="IndicatorColor">Indicator color</string>
    <string name="IgnoreUsers">Ignore Users</string>
	<string name="Notifications">Notifications</string>
    <string name="Resource">Resource</string>
    <string name="Autoconnect">Auto connect</string>
    <string name="OfflineContacts">Hide offline contacts</string>
    <string name="ShowTime">Show time</string>
    <string name="ShowStatus">Show status messages</string>
    <string name="InsertNewline">Newline after nickname</string>
    <string name="FontSize">Font size</string>
    <string name="DefaultFontSize">14</string>
    <string name="Connection">Connection</string>
    <string name="ConnectionSettings">Connection Settings</string>
    <string name="ExpandGroups">Expand groups on start</string>
    <string name="AutoSubscribe">Auto subscribe</string>
    <string name="Server">Server</string>
    <string name="Port">Port</string>
    <string name="EnableTls">TLS</string>
    <string name="EnableSasl">SASL</string>
    <string name="History">History</string>
    <string name="KeepHistory">Keep history</string>
    <string name="LoadHistory">Load history</string>
    <string name="Autostatus">Autostatus</string>
    <string name="ScreenTurnsOn">Screen turns On</string>
    <string name="ScreenTurnsOff">Screen turns Off</string>
    <string name="DelayAway">Delay before \"Away\"</string>
    <string name="DelayXa">Delay before \"Xa\"</string>
    <string name="AutoStatusTextAway">Autostatus \"Away\" %time%</string>
    <string name="AutoStatusTextXa">Autostatus \"Extended Away\" %time%</string>
    <string name="AwayPriority">Away priority</string>
    <string name="ExtendedAwayPriority">Extended Away priority</string>
    <string name="ShowGroups">Show Groups</string>
    <string name="ShowStatuses">Show Statuses</string>
    <string name="AutoJoin">Auto join</string>
    <string name="EnableCollapseMessages">Enable collapse messages</string>
    <string name="CollapseBigMessages">Auto collapse big messages</string>
    <string name="LoadAvatars">Show avatars</string>
    <string name="SendOnEnter">Send on \"Enter\"</string>
    <string name="ShowSmiles">Show smiles</string>
    <string name="Autoscroll">Autoscroll</string>
    <string name="ShowClientsIcons">Show clients icons</string>
    <string name="Icons">Icons</string>
    <string name="ShowSoundIconOnActionBar">Show sound icon on ActionBar</string>
    <string name="DarkColors">Dark colors</string>
    <string name="DeleteHistoryOnExit">Delete history on exit</string>
    <string name="MessageInNotification">Message in notification</string>
    <string name="Smiles">Smiles</string>
    <string name="Size">Size</string>
    <string name="Interface">Interface</string>
    <string name="Sidebar">Sidebar</string>
    <string name="IgnoreList">Ignore-List</string>
    <string name="AutoАctivate">Auto Аctivate</string>
    <string name="ActivateIgnoreListOnStart">Activate Ignore-List on start</string>
    <string name="Default">Default</string>
    <string name="IgnoreListDefaultList">Ignore-List is a default list</string>
    <string name="Experimental">Experimental</string>
    <string name="ShowMucGroup">Always show MUC group</string>
    <string name="SortByStatuses">Sort by statuses</string>
    <string name="ShowSelfResources">Show self resources</string>
    <string name="HideKeyboard">Hide keyboard on send</string>
    <string name="MaxMessages">Maximum messages in log</string>
    <string name="AddAfterNick">Add after nick</string>
    <string name="NumberOfCharacters">Number of characters</string>
    <string name="Columns">Columns</string>
    <string name="TheNumberColumnsDialog">The number of columns in the dialog</string>
    <string name="Locations">Send location information</string>
    <string name="SendTunes">Send Tunes</string>
    <string name="AutostartOnBoot">Autostart on boot</string>
    <string name="CompactMode">Compact mode</string>
    <string name="UseColors">Use colors</string>
    <string name="OnlyInMUC">Use only in MUC</string>
    <string name="ShowActiveChatsGroup">Group \"Active chats\"</string>
    <string name="ShowActiveContacts">Show doubles of active chats</string>
    <string name="NoMaxLines">Automatic height of message input</string>
    <string name="ColorLines">Striped background</string>
    <string name="ColorTheme">Theme</string>
    <string name="DisableSound">Disable sound</string>
    <string name="EnableSound">Enable sound</string>
    <string name="MucHistorySize">History size</string>
    <string name="hideVersion">Hide client version</string>
    <string name="Version">Version</string>
    <string name="AlwaysVisibleState">Always visible state</string>
    <string name="Update">Update</string>
    <string name="ExecuteCommand">Execute command</string>
    <string name="Edit">Edit</string>
    <string name="Copy">Copy</string>
    <string name="Remove">Remove</string>
    <string name="Reply">Reply</string>
    <string name="Clear">Clear</string>
    <string name="Info">Info</string>
    <string name="SendFile">Send file</string>
    <string name="MUC">Conferences</string>
    <string name="ChangeNick">Change nick</string>
    <string name="Expand">Expand</string>
    <string name="Collapse">Collapse</string>
    <string name="Subscribtion">Subscribtion</string>
    <string name="Request">Request</string>
    <string name="Allow">Allow</string>
    <string name="Rename">Rename</string>
    <string name="Subject">Subject</string>
    <string name="SendStatus">Send status</string>
    <string name="ActiveChats">Active Chats</string>
    <string name="Quote">Quote</string>
    <string name="CopySelectedMessages">Copy of selected messages</string>
    <string name="CopyTextMessage">Copy text of message</string>
    <string name="CopyMessage">Copy message</string>
    <string name="QuoteSelectedMessages">Quote of selected messages</string>
    <string name="QuoteTextMessage">Quote text of message</string>
    <string name="QuoteMessage">Quote message</string>
    <string name="DeleteHistory">Delete History</string>
    <string name="SelectText">Select text</string>
    <string name="Close">Close</string>
    <string name="CloseAll">Close all</string>
    <string name="ServiceDiscovery">Service Discovery</string>
    <string name="PasteSmile">Paste smile</string>
    <string name="PasteNick">Paste nick</string>
    <string name="Kick">Kick</string>
    <string name="Ban">Ban</string>
    <string name="GrantVoice">Grant voice</string>
    <string name="GrantAdmin">Grant admin</string>
    <string name="GrantModer">Grant moderator</string>
    <string name="GrantMember">Grant membership</string>
    <string name="GrantOwner">Grant ownership</string>
    <string name="RevokeVoice">Revoke voice</string>
    <string name="RevokeAdmin">Revoke admin</string>
    <string name="RevokeModer">Revoke moderator</string>
    <string name="RevokeMember">Revoke membership</string>
    <string name="RevokeOwner">Revoke ownership</string>
    <string name="ViewComments">View comments</string>
    <string name="PM">Private message</string>
    <string name="RecommendPost">Recommend post</string>
    <string name="Subscribe">Subscribe</string>
    <string name="Unsubscribe">Unsubscribe</string>
    <string name="ToBL">To blacklist</string>
    <string name="ShowSidebar">Show sidebar</string>
    <string name="HideSidebar">Hide sidebar</string>
    <string name="AddInIgnoreList">Add in Ignore-List</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="PrivacyLists">Privacy Lists</string>
    <string name="HideOfflineContacts">Hide offline contacts</string>
    <string name="ShowOfflineContacts">Show offline contacts</string>
    <string name="SelectMessage">Select messages</string>
    <string name="Finish">Finish</string>
    <string name="SendPhoto">Send photo</string>
    <string name="Room">Room</string>
    <string name="From">From</string>
    <string name="DialogJid">JID:</string>
    <string name="DialogPassword">Password:</string>
    <string name="addUserDialog_groupSwitcherLabel">Group:</string>
    <string name="Name">Name:</string>
    <string name="Nick">Nick:</string>
    <string name="PleaseWait">Please wait...</string>
    <string name="GoTo">Go to</string>
    <string name="Description">Description</string>
    <string name="SelectFile">Select file</string>
    <string name="SelectResource">Select resource</string>
    <string name="AcceptFile">Accept file?</string>
    <string name="Reason">Reason</string>
    <string name="SavePassword">Save password</string>
    <string name="vcard">vCard</string>
    <string name="FullName">Full Name:</string>
    <string name="FirstName">First name:</string>
    <string name="LastName">Last name:</string>
    <string name="MiddleName">Middle name:</string>
    <string name="NickName">Nick name:</string>
    <string name="HomeMail">Email (Home):</string>
    <string name="WorkMail">Email (Work):</string>
    <string name="HomePhone">Phone (Home):</string>
    <string name="WorkPhone">Phone (Work):</string>
    <string name="Birthday">Birthday:</string>
    <string name="Url">WWW:</string>
    <string name="About">About</string>
    <string name="Client">Client</string>
    <string name="Leave">Leave</string>
</resources>