<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/Roster">
        <CheckBoxPreference
                android:key="hideOffline"
                android:title="@string/OfflineContacts"
                android:defaultValue="false" />
        <CheckBoxPreference
                android:key="ShowGroups"
                android:title="@string/ShowGroups"
                android:defaultValue="true" />
        <CheckBoxPreference
                android:key="ShowActiveChatsGroup"
                android:dependency="ShowGroups"
                android:title="@string/ShowActiveChatsGroup"
                android:defaultValue="false" />
        <CheckBoxPreference
                android:key="ShowDoubles"
                android:dependency="ShowActiveChatsGroup"
                android:title="@string/ShowActiveContacts"
                android:defaultValue="false" />
        <CheckBoxPreference
                android:key="ShowMucGroup"
                android:title="@string/ShowMucGroup"
                android:defaultValue="false" />
        <CheckBoxPreference
                android:key="ShowStatuses"
                android:title="@string/ShowStatuses"
                android:defaultValue="false" />
        <CheckBoxPreference
                android:key="ShowCaps"
                android:title="@string/ShowClientsIcons"
                android:defaultValue="true" />
        <CheckBoxPreference
                android:key="LoadAvatar"
                android:title="@string/LoadAvatars"
                android:defaultValue="true" />
        <EditTextPreference
                android:key="RosterSize"
                android:numeric="integer"
                android:title="@string/FontSize"
                android:defaultValue="@string/DefaultFontSize" />
        <CheckBoxPreference
                android:key="SortByStatuses"
                android:title="@string/SortByStatuses"
                android:defaultValue="true" />
        <CheckBoxPreference
                android:key="SelfContact"
                android:title="@string/ShowSelfResources"
                android:defaultValue="true" />
        <CheckBoxPreference
                android:key="ColorLines"
                android:title="@string/ColorLines"
                android:defaultValue="false" />
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/Chat">
        <CheckBoxPreference
                android:key="ShowTime"
                android:title="@string/ShowTime"
                android:defaultValue="false" />
        <CheckBoxPreference
                android:key="ShowStatus"
                android:title="@string/ShowStatus"
                android:defaultValue="true" />
        <CheckBoxPreference
                android:key="AutoScroll"
                android:title="@string/Autoscroll"
                android:defaultValue="true" />
        <CheckBoxPreference
                android:key="EnableCollapseMessages"
                android:title="@string/EnableCollapseMessages"
                android:defaultValue="true" />
        <CheckBoxPreference
                android:dependency="EnableCollapseMessages"
                android:disableDependentsState="false"
                android:key="CollapseBigMessages"
                android:title="@string/CollapseBigMessages"
                android:defaultValue="false" />
        <CheckBoxPreference
                android:key="SendOnEnter"
                android:title="@string/SendOnEnter"
                android:defaultValue="false" />
        <CheckBoxPreference
                android:key="HideKeyboard"
                android:title="@string/HideKeyboard"
                android:defaultValue="true" />
        <EditTextPreference
                android:key="FontSize"
                android:title="@string/FontSize"
                android:defaultValue="@string/DefaultFontSize"
                android:numeric="integer"/>
        <EditTextPreference
                android:key="MaxLogMessages"
                android:title="@string/MaxMessages"
                android:defaultValue="0"
                android:numeric="integer"/>
        <CheckBoxPreference
                android:key="NoMaxLines"
                android:title="@string/NoMaxLines"
                android:defaultValue="true" />
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/MUC">
        <EditTextPreference
                android:key="MucHistorySize"
                android:title="@string/MucHistorySize"
                android:defaultValue="10"
                android:numeric="integer"/>
        <EditTextPreference
                android:key="nickSeparator"
                android:title="@string/AddAfterNick"
                android:defaultValue=", " />
        <EditTextPreference
                android:key="Highlights"
                android:title="Words for highlight"
                android:defaultValue="" />
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/Notifications">
        <!--<CheckBoxPreference-->
                <!--android:title="@string/AlwaysVisibleState"-->
                <!--android:key="StatusNotification"-->
                <!--android:defaultValue="true"/>-->

        <RingtonePreference android:key="ringtone"
                            android:title="@string/Ringtone"
                            android:showSilent="true"
                            android:showDefault="true"
                            android:ringtoneType="notification"	/>

        <RingtonePreference android:key="ringtone_conferences"
                            android:title="@string/RingtoneConference"
                            android:showSilent="true"
                            android:showDefault="true"
                            android:ringtoneType="notification"	/>

        <RingtonePreference android:key="ringtone_direct"
                            android:title="@string/RingtoneDirect"
                            android:showSilent="true"
                            android:showDefault="true"
                            android:ringtoneType="notification"	/>

        <ListPreference
                android:defaultValue="1"
                android:entries="@array/lightsArray"
                android:entryValues="@array/LightsValues"
                android:key="lightsColor"
                android:title="@string/IndicatorColor"/>

        <ListPreference
                android:defaultValue="1"
                android:entries="@array/vibrationArray"
                android:entryValues="@array/vibrationValues"
                android:key="vibrationMode"
                android:title="@string/Vibration"/>
        <CheckBoxPreference
                android:title="@string/MessageInNotification"
                android:key="MessageInNotification"
                android:defaultValue="false"/>
        <EditTextPreference
                android:dependency="MessageInNotification"
                android:key="MessageInNotificationCount"
                android:numeric="integer"
                android:title="@string/NumberOfCharacters"
                android:defaultValue="64" />
        <EditTextPreference
                android:key="IgnoreJids"
                android:title="@string/IgnoreUsers"
                android:defaultValue="" />
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/Autostatus">
        <CheckBoxPreference
                android:key="AutoStatus"
                android:title="@string/Autostatus"
                android:defaultValue="false" />
        <CheckBoxPreference
                android:dependency="AutoStatus"
                android:key="AutoStatusOnDisplayOn"
                android:title="@string/ScreenTurnsOn"
                android:defaultValue="false" />
        <CheckBoxPreference
                android:dependency="AutoStatusOnDisplayOn"
                android:key="AutoStatusOnDisplayOff"
                android:title="@string/ScreenTurnsOff"
                android:defaultValue="false" />
        <EditTextPreference
                android:dependency="AutoStatus"
                android:disableDependentsState="false"
                android:key="AutoStatusAway"
                android:numeric="integer"
                android:title="@string/DelayAway"
                android:defaultValue="10" />
        <EditTextPreference
                android:dependency="AutoStatus"
                android:key="AutoStatusXa"
                android:numeric="integer"
                android:title="@string/DelayXa"
                android:defaultValue="20" />
        <EditTextPreference
                android:dependency="AutoStatus"
                android:key="AutoStatusTextAway"
                android:title="@string/AutoStatusTextAway"
                android:defaultValue="@string/AutoStatusTextAway" />
        <EditTextPreference
                android:dependency="AutoStatus"
                android:key="AutoStatusTextXa"
                android:title="@string/AutoStatusTextXa"
                android:defaultValue="@string/AutoStatusTextXa" />
        <EditTextPreference
                android:dependency="AutoStatus"
                android:key="AutoStatusPriorityAway"
                android:numeric="integer"
                android:title="@string/AwayPriority"
                android:defaultValue="0" />
        <EditTextPreference
                android:dependency="AutoStatus"
                android:key="AutoStatusPriorityXa"
                android:numeric="integer"
                android:title="@string/ExtendedAwayPriority"
                android:defaultValue="0" />
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/Interface">
        <ListPreference
                android:key="ColorTheme"
                android:title="@string/ColorTheme"/>
        <PreferenceScreen android:title="@string/Smiles">
            <CheckBoxPreference
                    android:key="ShowSmiles"
                    android:title="@string/ShowSmiles"
                    android:defaultValue="true" />
            <ListPreference
                    android:key="SmilesPack"
                    android:title="@string/Smiles"/>
            <EditTextPreference
                    android:key="SmilesSize"
                    android:title="@string/Size"
                    android:defaultValue="18"
                    android:numeric="integer"/>
            <EditTextPreference
                    android:key="SmilesColumns"
                    android:title="@string/Columns"
                    android:summary="@string/TheNumberColumnsDialog"
                    android:defaultValue="5"
                    android:numeric="integer"/>
        </PreferenceScreen>
        <ListPreference
                android:key="IconPack"
                android:title="@string/Icons"/>
        <PreferenceScreen android:title="@string/Sidebar">
            <CheckBoxPreference
                    android:key="CompactMode"
                    android:title="@string/CompactMode"
                    android:defaultValue="true" />
            <CheckBoxPreference
                    android:key="ColoredBar"
                    android:title="@string/UseColors"
                    android:defaultValue="true" />
            <CheckBoxPreference
                    android:key="InMUC"
                    android:title="@string/OnlyInMUC"
                    android:defaultValue="false" />
        </PreferenceScreen>

        <CheckBoxPreference
                android:key="showSound"
                android:title="@string/ShowSoundIconOnActionBar"
                android:defaultValue="false" />
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/IgnoreList">
        <CheckBoxPreference
                android:title="@string/AutoАctivate"
                android:summary="@string/ActivateIgnoreListOnStart"
                android:key="ActivateIgnoreList"
                android:defaultValue="false"/>
        <CheckBoxPreference
                android:title="@string/Default"
                android:summary="@string/IgnoreListDefaultList"
                android:key="SetIgnoreListDefault"
                android:defaultValue="false"/>
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/Other">
        <CheckBoxPreference
                android:title="@string/AutostartOnBoot"
                android:key="AUTOSTART"
                android:defaultValue="false"/>
        <CheckBoxPreference
                android:title="@string/DeleteHistoryOnExit"
                android:key="DeleteHistory"
                android:defaultValue="false"/>
        <CheckBoxPreference
                android:title="Wi-Fi Lock"
                android:key="WifiLock"
                android:defaultValue="false"/>
        <CheckBoxPreference
                android:title="@string/SendTunes"
                android:key="PlayingNow"
                android:defaultValue="false"/>
        <CheckBoxPreference
                android:title="@string/hideVersion"
                android:key="hideVersion"
                android:defaultValue="false"/>
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/Experimental">
        <EditTextPreference
                android:key="RosterColumns"
                android:title="Columns in roster"
                android:summary="Only if 'Show groups' is off"
                android:defaultValue="1"
                android:numeric="integer"/>
        <CheckBoxPreference
                android:title="Auto load avatars"
                android:key="LoadAllAvatars"
                android:defaultValue="true"/>
        <CheckBoxPreference
                android:title="Ping to server"
                android:summary="Needed reconnect"
                android:key="Ping"
                android:defaultValue="false"/>
        <EditTextPreference
                android:dependency="Ping"
                android:key="PingTimeout"
                android:title="Ping timeout"
                android:summary="in seconds"
                android:defaultValue="60"
                android:numeric="integer"/>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/Info">
        <Preference
                android:title="@string/Client"
                android:summary="@string/app_name"/>
        <Preference
                android:key="version"
                android:title="@string/Version"/>
        <Preference
                android:key="build"
                android:title="Build"/>
        <Preference
                android:title="Web"
                android:summary="http://jabga.ru/">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="http://jabga.ru/"/>
        </Preference>
    </PreferenceScreen>
</PreferenceScreen>