<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/chats"
	    android:showAsAction="always"
	    android:icon="@drawable/ic_menu_cc"
        android:title="@string/ActiveChats"/>
    <item android:id="@+id/status"
        android:showAsAction="never"
        android:title="@string/Status"/>
	<item android:id="@+id/add"
	    android:showAsAction="never"
        android:title="@string/Add"/>
    <item android:id="@+id/bookmarks"
        android:showAsAction="never"
        android:title="@string/Bookmarks"/>
    <item android:id="@+id/muc"
          android:showAsAction="never"
          android:title="@string/MUC"/>
    <item android:id="@+id/offline"
        android:showAsAction="never"
        android:title=""/>
    <item android:id="@+id/search"
          android:title="@android:string/search_go"
          android:showAsAction="never"/>
    <item android:id="@+id/accounts"
        android:showAsAction="never"
        android:title="@string/Accounts"/>
    <item android:id="@+id/disco"
        android:showAsAction="never"
        android:title="@string/ServiceDiscovery"/>
    <item android:id="@+id/notify"
          android:showAsAction="never"
          android:title="@string/DisableSound"/>
    <item android:id="@+id/prefs"
        android:showAsAction="never"
        android:title="@string/Settings"/>
    <item android:id="@+id/exit"
        android:showAsAction="never"
        android:title="@string/Exit"/>
</menu>
